--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,4 @@
 sonar.projectKey=anushri-nr_web-extension
-sonar.branch.name=anushri
+sonar.pullrequest.key = 1
+sonar.pullrequest.branch = feature/anushri
+sonar.pullrequest.base = master
